<resources>
    <string name="app_name">CryptGuard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_database">Database</string>
    <string name="menu_passwords">Passwords</string>
    <string name="menu_encrypter">Encrypter</string>
    <string name="menu_generator">Password generator</string>
    <string name="add_new_password_text_floating">Add new password</string>
    <string name="show_password_button_description">Show password</string>
    <string name="show_password_button_text">show</string>
    <string name="generate_a_password_button_text">Generate</string>
    <string name="generated_password_placeholder_text">Generated password</string>
    <string name="copy_to_clipboard_description">Copy to clipboard</string>
    <string name="recommended_password_length">32</string>
    <string name="choose_a_file_encrypter_btn">Encrypt file</string>
    <string name="encrypter_header_text">Choose a file to be encrypted/decrypted and enter the passphrase:</string>
    <string name="choose_a_file_decrypter_btn">Decrypt file</string>
    <string name="password_encrypter_text">Enter your password</string>
    <string name="password_detail_site_name">Site name</string>
    <string name="password_detail_username">Username</string>
    <string name="password_detail_e_mail">E-mail</string>
    <string name="password_detail_additional_data">Additional data</string>
    <string name="password_detail_password">Password</string>
    <string name="password_detail_save">SAVE</string>
    <string name="password_detail_delete">DELETE</string>
    <string name="password_detail_add">+</string>
    <string name="empty_passwords_recycler_text">It appears you have no passwords saved. Press + to start adding some.</string>
    <string name="database_settings_text">Database settings</string>
    <string name="current_database_password_text">Enter current database password</string>
    <string name="import_db_button_text">IMPORT</string>
    <string name="export_db_button_text">EXPORT</string>
    <string name="unlock_db_button_text">UNLOCK</string>
    <string name="change_db_password_button_text">CHANGE PASSWORD</string>
    <string name="new_database_password_text">Enter new database password</string>
    <string name="database_operations_text">Database operations</string>
    <string name="enter_new_database_password_text">Enter new database password</string>
    <string name="lock_db_button_text">LOCK</string>
    <string name="import_db_alert_text">Your current database will be deleted, are you sure you want to import other database?</string>
    <string name="create_text">CREATE</string>
    <string name="unlock_text">UNLOCK</string>
    <string name="delete_current_database">DELETE CURRENT DATABASE</string>
    <string name="warning_delete_database_text">THIS PROCESS CANNOT BE UNDONE. Are you sure that you want to delete your database?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="online_account">Online account</string>
    <string name="username">Username</string>
    <string name="request_login_password">Request login password</string>
</resources>