<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingStart="5sp"
    android:paddingEnd="5sp"
    tools:context=".ui.password_detail_item.PasswordDetailItemFragment">


    <EditText
        android:id="@+id/edit_text_site_name_pass_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_detail_site_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_site_name_pass_detail"
        app:layout_constraintVertical_bias="0.028">

        <EditText
            android:id="@+id/edit_text_username_pass_detail"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_detail_username"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.211" />

        <ImageButton
            android:id="@+id/button_copy_username_to_clipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/charleston_green_bright"
            android:contentDescription="@string/copy_to_clipboard_description"
            android:src="?attr/actionModeCopyDrawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generate_password_button"
            app:layout_constraintVertical_bias="0.357" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.042">

        <EditText
            android:id="@+id/edit_text_email_pass_detail"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_detail_e_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.316" />

        <ImageButton
            android:id="@+id/button_copy_email_to_clipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/charleston_green_bright"
            android:contentDescription="@string/copy_to_clipboard_description"
            android:src="?attr/actionModeCopyDrawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generate_password_button"
            app:layout_constraintVertical_bias="0.357" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.062">

        <EditText
            android:id="@+id/edit_text_password_pass_detail"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_detail_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.431"
            tools:layout_editor_absoluteX="5dp" />

        <ImageButton
            android:id="@+id/button_show_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/charleston_green_bright"
            android:contentDescription="@string/copy_to_clipboard_description"
            android:src="@drawable/ic_baseline_remove_red_eye_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generate_password_button"
            app:layout_constraintVertical_bias="0.357" />

        <ImageButton
            android:id="@+id/button_copy_password_to_clipboard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/charleston_green_bright"
            android:contentDescription="@string/copy_to_clipboard_description"
            android:src="?attr/actionModeCopyDrawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generate_password_button"
            app:layout_constraintVertical_bias="0.357" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_additional_data_pass_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Additional data"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/password_detail_additional_data"
        android:inputType="textMultiLine"
        android:lines="6"
        android:minLines="4"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

    <Button
        android:id="@+id/button_save_password"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/password_detail_save"
        android:backgroundTint="@color/charleston_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_additional_data_pass_detail" />

    <Button
        android:id="@+id/button_add_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/charleston_green"
        android:text="@string/password_detail_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_delete_password"
        app:layout_constraintStart_toEndOf="@+id/button_save_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_additional_data_pass_detail" />

    <Button
        android:id="@+id/button_delete_password"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/charleston_green"
        android:text="@string/password_detail_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_additional_data_pass_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>