<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ui.generator.GeneratorFragment">

    <ImageView
        android:id="@+id/dice_logo_img_view"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:src="@drawable/ic_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_generator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_logo_img_view" />

    <EditText
        android:id="@+id/character_length_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Password length"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:ems="2"
        android:hint="@string/recommended_password_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_generator" />

    <Button
        android:id="@+id/generate_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/charleston_green_bright"
        android:text="@string/generate_a_password_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_length_edit_text" />


    <EditText
        android:id="@+id/password_edit_text"
        android:fontFamily="monospace"
        android:textSize="17sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/generated_password_placeholder_text"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/copyToClipboardButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_password_button"
        app:layout_constraintVertical_bias="0.359" />

    <ImageButton
        android:id="@+id/copyToClipboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/charleston_green_bright"
        android:contentDescription="@string/copy_to_clipboard_description"
        android:src="?attr/actionModeCopyDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_password_button"
        app:layout_constraintVertical_bias="0.357" />


</androidx.constraintlayout.widget.ConstraintLayout>